# assignments-3-and-later-Silex93

./: CMakeLists.txt
aesd-char-driver/: aesdchar.h  main.c
assignments/assignment2/: cross-compile.txt
assignments/assignment7/: faulty-oops.md
conf/: username.txt
examples/autotest-validate/: autotest-validate.c
examples/systemcalls/: systemcalls.c
examples/threading/: threading.c  threading.h
finder-app/: Makefile  finder-test.sh  finder.sh  manual-linux.sh  writer.c  writer.sh
server/: Makefile  aesdsocket-start-stop.sh  aesdsocket.c  valgrind-out.txt
student-test/assignment1/: Test_validate_username.c
